New datagen files

--- a/src/main/resources/assets/funmod/lang/en_us.json
+++ b/src/main/resources/assets/funmod/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "item.funmod.ruby": "Ruby",
 
-  "item.funmod.emerald_helmet": "Emerald Helmet",
-  "item.funmod.emerald_chestplate": "Emerald Chestplate",
-  "item.funmod.emerald_leggings": "Emerald Leggings",
-  "item.funmod.emerald_boots": "Emerald Boots"
+  "item.funmod.ruby_helmet": "Ruby Helmet",
+  "item.funmod.ruby_chestplate": "Ruby Chestplate",
+  "item.funmod.ruby_leggings": "Ruby Leggings",
+  "item.funmod.ruby_boots": "Ruby Boots"
 }
